Make changes to see output work

--- a/ci/demo_pipeline.yml
+++ b/ci/demo_pipeline.yml
@@ -11,3 +11,5 @@ jobs:
         trigger: true
       - task: setup the program
         file: python-helloworld/ci/tasks/run_setup.yml
+      - task: run the program
+        file: /tmp/my_file_exec
